--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SingleDocActivity"/>
+        <activity android:name=".VariousDocListActivity"/>
     </application>
 
 </manifest>
