--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity
             android:name=".SignedDocsHistoric"
             android:exported="false" />
+        <activity android:name=".DNISignActivity" />
     </application>
 
 </manifest>
